improvements like ability to set a custom chat format

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,5 @@
-spoof-uuids: true
+spoof-ping: true
 join-message: '§e%player% has joined the server'
 quit-message: '§e%player% has quit the server'
 death-message: '§4%player% has died'
+chat-format: '§2%name%§f %number% (%chatid%): '
