added jannies list with moderation tools with /moderate

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: AnonMC
 version: '${version}'
+author: s4s
 main: eu.caec.anonmc.AnonMC
 api-version: '1.18'
 description: Carries the idea of anonymous imageboards to Minecraft (except there are no images)
@@ -7,3 +8,5 @@ depend: [ProtocolLib]
 commands:
   name:
     description: Changes your name
+  moderate:
+    description: Moderation tools, only available to operators and jannies
