--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,3 +3,6 @@ join-message: '§e%player% has joined the server'
 quit-message: '§e%player% has quit the server'
 death-message: '§4%player% has died'
 chat-format: '§2%name%§f %number% (%chatid%): '
+jannies:
+  - 'ThisNameIsAnExample1'
+  - 'ThisNameIsAnExample2'
