--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'eu.caec'
-version = '1.0-SNAPSHOT'
+version = '1.1'
 
 repositories {
     mavenCentral()
@@ -16,13 +16,13 @@ repositories {
         url = "https://oss.sonatype.org/content/groups/public/"
     }
     maven {
-        url "https://repo.dmulloy2.net/repository/public/"
+        url "https://repo.codemc.io/repository/maven-releases/"
     }
 }
 
 dependencies {
-    compileOnly "org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT"
-    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "5.1.0"
+    compileOnly "org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT"
+    compileOnly "com.github.retrooper.packetevents:spigot:2.2.1"
 }
 
 def targetJavaVersion = 17
