moved from protocollib over to packetevents

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,6 @@
 spoof-ping: true
+enable-join-leave-messages: true
+enable-death-messages: true
 join-message: '§e%player% has joined the server'
 quit-message: '§e%player% has quit the server'
 death-message: '§4%player% has died'
