--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,9 +2,10 @@ name: AnonMC
 version: '${version}'
 author: s4s
 main: eu.caec.anonmc.AnonMC
-api-version: '1.18'
+api-version: '1.20'
 description: Carries the idea of anonymous imageboards to Minecraft (except there are no images)
-depend: [ProtocolLib]
+depend:
+  - packetevents
 commands:
   name:
     description: Changes your name
